service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30007
